--- a/app-config.yaml
+++ b/app-config.yaml
@@ -104,7 +104,7 @@ search:
       maxWord: 35 # Used to set the longest headlines to output. The default value is 35.
       minWord: 15 # Used to set the shortest headlines to output. The default value is 15.
       shortWord: 3 # Words of this length or less will be dropped at the start and end of a headline, unless they are query terms. The default value of three (3) eliminates common English articles.
-      highlightAll: false # If true the whole document will be used as the headline, ignoring the preceding three parameters. The default is false.
+      highlightAll: false # If true, the whole document will be used as the headline, ignoring the preceding three parameters. The default is false.
       maxFragments: 0 # Maximum number of text fragments to display. The default value of zero selects a non-fragment-based headline generation method. A value greater than zero selects fragment-based headline generation (see the linked documentation above for more details).
       fragmentDelimiter: ' ... ' # Delimiter string used to concatenate fragments. Defaults to " ... ".
 catalog:
